--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^0.5.1",
+    "date-fns": "^2.8.1",
     "frontmatter-markdown-loader": "^3.1.0"
   }
 }
