--- a/package.json
+++ b/package.json
@@ -11,12 +11,22 @@
     "generate": "node content/index.js && nuxt generate"
   },
   "dependencies": {
+    "@bazzite/nuxt-optimized-images": "^0.2.2",
     "@nuxt/typescript-runtime": "0.3.2",
     "@nuxtjs/axios": "5.8.0",
     "front-matter-markdown": "^0.4.4",
+    "imagemin-gifsicle": "^6.0.1",
+    "imagemin-mozjpeg": "^8.0.0",
+    "imagemin-pngquant": "^8.0.0",
+    "imagemin-svgo": "^7.0.0",
+    "jimp": "^0.9.3",
+    "lqip-loader": "^2.2.0",
     "nuxt": "2.10.2",
     "nuxt-property-decorator": "2.5.0",
-    "vuex-class": "0.3.2"
+    "responsive-loader": "^1.2.0",
+    "sqip-loader": "^1.0.0",
+    "vuex-class": "0.3.2",
+    "webp-loader": "^0.6.0"
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^0.5.1",
