--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "generate": "node content/index.js && nuxt generate"
   },
   "dependencies": {
+    "@bazzite/nuxt-optimized-images": "^0.3.0",
     "@nuxt/typescript-runtime": "0.3.2",
     "@nuxtjs/axios": "5.8.0",
     "front-matter-markdown": "^0.4.4",
     "gsap": "^3.0.4",
+    "imagemin-mozjpeg": "^8.0.0",
+    "lqip-loader": "^2.2.0",
     "nuxt": "2.10.2",
     "nuxt-property-decorator": "2.5.0",
     "vuex-class": "0.3.2"
