--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "frontmatter-markdown-loader": "^3.1.0",
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-pngquant": "^8.0.0",
-    "lqip-loader": "^2.2.0",
+    "responsive-loader": "^1.2.0",
+    "sharp": "^0.23.4",
+    "sqip-loader": "^1.0.0",
     "webp-loader": "^0.6.0"
   }
 }
