--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "node content/index.js && nuxt generate"
+    "generate": "nuxt generate"
   },
   "dependencies": {
     "@nuxt/typescript-runtime": "0.3.2",
